# conflicting_weak_bug

./: Cargo.toml  README.md
src/: lib.rs  main.rs
