[package]
name = "conflicting_weak_bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib"]
# [[bin]]
# name = "conflicting_weak_bug"

[dependencies]
hyper-util = { version = "0.1.3", features = ["client-legacy"] }
